--- a/src/assets/css/pages/login.css
+++ b/src/assets/css/pages/login.css
@@ -214,6 +214,10 @@
   border: none;
 }
 
+span.checkbox-label.fs-14.me-5.fw-500.main-label {
+  min-width: 170px;
+}
+
 @media only screen and (max-width: 575px) {
   .fs-16 {
     font-size: 14px;
