--- a/src/scss/pages/login.scss
+++ b/src/scss/pages/login.scss
@@ -93,6 +93,9 @@ color: #000;
   padding: 0 10px;
   border: none;
 }
+span.checkbox-label.fs-14.me-5.fw-500.main-label {
+  min-width: 170px;
+}
 @media only screen and (max-width: 575px) {
 
 .fs-16 {
