--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2786,6 +2786,10 @@ label.checkbox-inline.squar-boxes img.offline {
   border: none;
 }
 
+span.checkbox-label.fs-14.me-5.fw-500.main-label {
+  min-width: 170px;
+}
+
 @media only screen and (max-width: 575px) {
   .fs-16 {
     font-size: 14px;
