client profile design fixes

--- a/src/scss/component/_input.scss
+++ b/src/scss/component/_input.scss
@@ -79,6 +79,7 @@ input:-webkit-autofill:active {
     border: 1px solid #e6e6e6;
     padding-left: 10px;
     border-radius: 4px;
+    background: white;
 
     input {
       margin-left: 0 !important;
