--- a/src/scss/pages/client-profile.scss
+++ b/src/scss/pages/client-profile.scss
@@ -164,6 +164,34 @@
   }
 }
 
+.policy-table.transection-table {
+  .link-label {
+    color: var(--color-light-gray3);
+  }
+  .policy-table-card {
+    outline: var(--color-border-light) solid 1px;
+    box-shadow: none;
+    border-radius: 4px;
+
+    h4 {
+      color: var(--color-black);
+      font-size: 18px;
+      small {
+        color: var(--color-light-gray3);
+        font-weight: 400;
+      }
+    }
+
+    td {
+      font-size: 12px;
+      color: var(--color-light-gray);
+    }
+
+    .sperator-verticle {
+      color: var(--color-border-light);
+    }
+  }
+}
 .policy-table {
   border-spacing: 0 10px;
   margin-bottom: 0;
@@ -245,11 +273,10 @@
   }
 
   @media screen and (max-width: 778px) {
-    .btn.btn-lg{
+    .btn.btn-lg {
       width: 100vw;
       max-width: 100vw;
       margin: 10px -15px;
-
     }
   }
 }
@@ -859,7 +886,7 @@
       &.edit-mode {
         .documents-attached {
           & > * {
-            width: 100%;
+            // width: 100%;
           }
 
           .doc-card {
@@ -885,11 +912,10 @@
           }
         }
 
-        .notes-option{
-            opacity: .25;
+        .notes-option {
+          opacity: 0.25;
         }
       }
-
     }
 
     .updated-items {
@@ -1041,4 +1067,46 @@
       margin-bottom: 10px;
     }
   }
+}
+
+// ============================
+.filter-section {
+  position: relative;
+  .filter-modal::before {
+    content: "";
+    width: 15px;
+    height: 15px;
+    background: white;
+    border-radius: 3px;
+    transform: rotate(45deg);
+    position: absolute;
+    right: -5px;
+    top: 40px;
+    z-index: 2;
+}
+}
+.filter-section  .filter-modal{
+  position: absolute;
+  left: auto !important;
+  right: 30px !important;
+  top: -40px !important;
+  width: 364px;
+  height: auto;
+  padding-top: 16px !important;
+  overflow: visible;
+
+  .method-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 16px;
+  }
+
+  .modal-content{
+    border: 0;
+  }
+}
+
+.modal-backdrop.show {
+  opacity: 0.1;
 }
