--- a/src/scss/pages/insurance-upload.scss
+++ b/src/scss/pages/insurance-upload.scss
@@ -161,8 +161,7 @@
 
     .btn-add,
     .user-info .user-welcome,
-    .radio-box.button-style .radio-box-custom,
-    .fs-12 {
+    .radio-box.button-style .radio-box-custom {
         font-size: 14px !important;
     }
 
