--- a/src/assets/css/pages/login.css
+++ b/src/assets/css/pages/login.css
@@ -218,6 +218,11 @@ span.checkbox-label.fs-14.me-5.fw-500.main-label {
   min-width: 170px;
 }
 
+.radio-check-switch .radio-switch-state {
+  border: 1px dashed #67A6D9;
+  border-radius: 5px;
+}
+
 @media only screen and (max-width: 575px) {
   .fs-16 {
     font-size: 14px;
