--- a/src/scss/pages/login.scss
+++ b/src/scss/pages/login.scss
@@ -96,6 +96,11 @@ color: #000;
 span.checkbox-label.fs-14.me-5.fw-500.main-label {
   min-width: 170px;
 }
+.radio-check-switch .radio-switch-state{
+  border: 1px dashed #67A6D9;
+  border-radius: 5px;
+  
+}
 @media only screen and (max-width: 575px) {
 
 .fs-16 {
