--- a/src/scss/pages/login.scss
+++ b/src/scss/pages/login.scss
@@ -74,8 +74,11 @@ margin-left: 12px;
   bottom: -5px;
 }
 .filter-menu{
-  width: 375px;
+  width: 390px;
 }
+.filter-menu .radio-btn .radio-label {
+ 
+  font-size: 13px !important;}
 .filter-menu .checkbox-label{
   font-size: 14px !important  ;
 }
