--- a/src/assets/css/pages/login.css
+++ b/src/assets/css/pages/login.css
@@ -193,7 +193,11 @@
 }
 
 .filter-menu {
-  width: 375px;
+  width: 390px;
+}
+
+.filter-menu .radio-btn .radio-label {
+  font-size: 13px !important;
 }
 
 .filter-menu .checkbox-label {
