Updated PDF forms and home home insurare claim page

--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -15,3 +15,5 @@
 @forward "./housing-insurance";
 @forward "./login";
 @forward "./admin-page.scss";
+@forward "./certificate.scss";
+@forward "./binder-pdf.scss";
