Metlife pdf, udpates

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -330,6 +330,18 @@ a {
   color: var(--color-blue);
 }
 
+.z-index-1 {
+  z-index: 1;
+}
+
+.z-index-2 {
+  z-index: 2;
+}
+
+.z-index-3 {
+  z-index: 3;
+}
+
 .has-error {
   color: var(--color-has-error) !important;
 }
@@ -3964,6 +3976,758 @@ span.checkbox-label.fs-14.me-5.fw-500.main-label {
 }
 .page-details.binders-pdf .policy-table.policy-expiry {
   left: 491px;
+}
+
+.page {
+  page-break-after: always;
+  position: relative;
+}
+
+.page-details.bristol-eft {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10000;
+}
+.page-details.bristol-eft input[type=date]::-webkit-inner-spin-button, .page-details.bristol-eft input[type=date]::-webkit-calendar-picker-indicator,
+.page-details.bristol-eft input[type=year]::-webkit-inner-spin-button,
+.page-details.bristol-eft input[type=year]::-webkit-calendar-picker-indicator,
+.page-details.bristol-eft input[type=month]::-webkit-inner-spin-button,
+.page-details.bristol-eft input[type=month]::-webkit-calendar-picker-indicator {
+  display: none;
+  -webkit-appearance: none;
+}
+.page-details.bristol-eft .form-img {
+  width: 100%;
+}
+.page-details.bristol-eft .answer {
+  position: absolute;
+  bottom: 0;
+}
+.page-details.bristol-eft .answer img {
+  width: 100%;
+  position: absolute;
+}
+.page-details.bristol-eft .answer input,
+.page-details.bristol-eft .answer textarea {
+  width: 100%;
+  font-size: 10px;
+  font-weight: bold;
+  color: #141414;
+  position: absolute;
+  background: transparent;
+  overflow: hidden;
+}
+.page-details.bristol-eft .answer textarea {
+  font-size: 10px;
+  padding: 0 5px;
+}
+.page-details.bristol-eft .answer.monospace {
+  font-family: monospace;
+  letter-spacing: 7px;
+}
+.page-details.bristol-eft .answer .check-mark {
+  position: absolute;
+}
+.page-details.bristol-eft .answer .check-mark::before, .page-details.bristol-eft .answer .check-mark::after {
+  content: "";
+  height: 2px;
+  width: 15px;
+  background: black;
+  position: absolute;
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+.page-details.bristol-eft .answer .check-mark::before {
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+.page-details.bristol-eft textarea.form-control {
+  border: 0;
+  resize: none;
+  height: 100%;
+}
+.page-details.bristol-eft .payment-info {
+  position: absolute;
+  top: 612px;
+  left: 50px;
+}
+.page-details.bristol-eft .payment-info .a1 {
+  left: 78px;
+  width: 246px;
+  top: 6px;
+}
+.page-details.bristol-eft .payment-info .a2 {
+  left: 434px;
+  width: 192px;
+  top: 6px;
+}
+.page-details.bristol-eft .payment-info .a3 {
+  left: 80px;
+  width: 242px;
+  top: 36px;
+}
+.page-details.bristol-eft .payment-info .a4 {
+  left: 446px;
+  width: 192px;
+  top: 36px;
+}
+.page-details.bristol-eft .payment-details {
+  position: absolute;
+  top: 742px;
+}
+.page-details.bristol-eft .payment-details .b1.b1-1 {
+  left: 141px;
+  width: 20px;
+  top: 1px;
+}
+.page-details.bristol-eft .payment-details .b1.b1-2 {
+  left: 212px;
+  width: 20px;
+  top: 1px;
+}
+.page-details.bristol-eft .payment-details .b2 {
+  left: 110px;
+  width: 246px;
+  top: 14px;
+}
+.page-details.bristol-eft .payment-details .b3 {
+  left: 136px;
+  width: 214px;
+  top: 40px;
+}
+.page-details.bristol-eft .payment-details .b4 {
+  left: 144px;
+  width: 189px;
+  top: 65px;
+}
+.page-details.bristol-eft .payment-details .b4.monospace input {
+  font-family: monospace;
+  letter-spacing: 7px;
+}
+.page-details.bristol-eft .payment-details .b5 {
+  left: 100px;
+  width: 246px;
+  top: 90px;
+}
+.page-details.bristol-eft .payment-details.payment-details-cards {
+  left: 404px;
+}
+.page-details.bristol-eft .payment-details.payment-details-cards .b1.b1-1 {
+  left: 87px;
+  width: 20px;
+  top: -1px;
+}
+.page-details.bristol-eft .payment-details.payment-details-cards .b1.b1-2 {
+  left: 130px;
+  width: 20px;
+  top: -1px;
+}
+.page-details.bristol-eft .payment-details.payment-details-cards .b1.b1-3 {
+  left: 173px;
+  width: 20px;
+  top: -1px;
+}
+.page-details.bristol-eft .payment-details.payment-details-cards .b1.b1-4 {
+  left: 222px;
+  width: 20px;
+  top: -1px;
+}
+.page-details.bristol-eft .payment-details.payment-details-cards .b2 {
+  left: 72px;
+}
+.page-details.bristol-eft .payment-details.payment-details-cards .b3 {
+  left: 115px;
+  width: 216px;
+  top: 53px;
+}
+.page-details.bristol-eft .payment-details.payment-details-cards .b3.monospace input {
+  font-family: monospace;
+  letter-spacing: 7px;
+}
+.page-details.bristol-eft .payment-details.payment-details-cards .b4 {
+  left: 84px;
+  width: 33px;
+  top: 79px;
+}
+.page-details.bristol-eft .payment-details.payment-details-cards .b4.monospace input {
+  font-family: monospace;
+  letter-spacing: 7px;
+}
+.page-details.bristol-eft .payment-details.payment-details-cards .b5 {
+  left: 114px;
+  width: 79px;
+  top: 79px;
+}
+.page-details.bristol-eft .payment-details.payment-details-cards .b5.monospace input {
+  font-family: monospace;
+  letter-spacing: 7px;
+}
+
+.page {
+  page-break-after: always;
+  position: relative;
+}
+
+.page-details.ma-operator {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10000;
+}
+.page-details.ma-operator input[type=date]::-webkit-inner-spin-button, .page-details.ma-operator input[type=date]::-webkit-calendar-picker-indicator,
+.page-details.ma-operator input[type=year]::-webkit-inner-spin-button,
+.page-details.ma-operator input[type=year]::-webkit-calendar-picker-indicator,
+.page-details.ma-operator input[type=month]::-webkit-inner-spin-button,
+.page-details.ma-operator input[type=month]::-webkit-calendar-picker-indicator {
+  display: none;
+  -webkit-appearance: none;
+}
+.page-details.ma-operator .form-img {
+  width: 100%;
+}
+.page-details.ma-operator .answer {
+  position: absolute;
+  bottom: 0;
+}
+.page-details.ma-operator .answer img {
+  width: 100%;
+  position: absolute;
+}
+.page-details.ma-operator .answer input,
+.page-details.ma-operator .answer textarea {
+  width: 100%;
+  font-size: 10px;
+  font-weight: bold;
+  color: #141414;
+  position: absolute;
+  background: transparent;
+  overflow: hidden;
+}
+.page-details.ma-operator .answer textarea {
+  font-size: 10px;
+  padding: 0 5px;
+}
+.page-details.ma-operator .answer.monospace {
+  font-family: monospace;
+  letter-spacing: 7px;
+}
+.page-details.ma-operator .answer .check-mark {
+  position: absolute;
+}
+.page-details.ma-operator .answer .check-mark::before, .page-details.ma-operator .answer .check-mark::after {
+  content: "";
+  height: 2px;
+  width: 15px;
+  background: black;
+  position: absolute;
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+.page-details.ma-operator .answer .check-mark::before {
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+.page-details.ma-operator textarea.form-control {
+  border: 0;
+  resize: none;
+  height: 100%;
+}
+.page-details.ma-operator .operator-info {
+  position: absolute;
+  top: 272px;
+  left: 140px;
+}
+.page-details.ma-operator .operator-info .a1 {
+  left: 86px;
+  width: 422px;
+  top: 6px;
+}
+.page-details.ma-operator .operator-info .a2 {
+  left: 86px;
+  width: 192px;
+  height: 132px;
+  top: 44px;
+}
+.page-details.ma-operator .operator-info .a2 textarea {
+  line-height: 15.3px;
+}
+.page-details.ma-operator .holder-info {
+  position: absolute;
+  top: 602px;
+  left: 50px;
+}
+.page-details.ma-operator .holder-info input {
+  font-size: 16px;
+}
+.page-details.ma-operator .holder-info .a1 {
+  left: 86px;
+  width: 155px;
+  top: -7px;
+}
+.page-details.ma-operator .holder-info .a2 {
+  left: 86px;
+  width: 152px;
+  top: 57px;
+}
+
+.page {
+  page-break-after: always;
+  position: relative;
+}
+
+.page-details.farmers-card {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10000;
+}
+.page-details.farmers-card input[type=date]::-webkit-inner-spin-button, .page-details.farmers-card input[type=date]::-webkit-calendar-picker-indicator,
+.page-details.farmers-card input[type=year]::-webkit-inner-spin-button,
+.page-details.farmers-card input[type=year]::-webkit-calendar-picker-indicator,
+.page-details.farmers-card input[type=month]::-webkit-inner-spin-button,
+.page-details.farmers-card input[type=month]::-webkit-calendar-picker-indicator {
+  display: none;
+  -webkit-appearance: none;
+}
+.page-details.farmers-card .form-img {
+  width: 100%;
+}
+.page-details.farmers-card .answer {
+  position: absolute;
+  bottom: 0;
+}
+.page-details.farmers-card .answer img {
+  width: 100%;
+  position: absolute;
+}
+.page-details.farmers-card .answer input,
+.page-details.farmers-card .answer textarea {
+  width: 100%;
+  font-size: 10px;
+  font-weight: bold;
+  color: #141414;
+  position: absolute;
+  background: transparent;
+  overflow: hidden;
+}
+.page-details.farmers-card .answer textarea {
+  font-size: 10px;
+  padding: 0 5px;
+}
+.page-details.farmers-card .answer.monospace {
+  font-family: monospace;
+  letter-spacing: 7px;
+}
+.page-details.farmers-card .answer .check-mark {
+  position: absolute;
+}
+.page-details.farmers-card .answer .check-mark::before, .page-details.farmers-card .answer .check-mark::after {
+  content: "";
+  height: 2px;
+  width: 15px;
+  background: black;
+  position: absolute;
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+.page-details.farmers-card .answer .check-mark::before {
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+.page-details.farmers-card textarea.form-control {
+  border: 0;
+  resize: none;
+  height: 100%;
+}
+.page-details.farmers-card .policy-info {
+  position: absolute;
+  top: 152px;
+  left: 0px;
+}
+.page-details.farmers-card .policy-info .a1 {
+  left: 498px;
+  width: 246px;
+  top: 6px;
+}
+.page-details.farmers-card .policy-info .a2 {
+  left: 327px;
+  width: 182px;
+  top: 31px;
+}
+.page-details.farmers-card .policy-info .a3 {
+  left: 570px;
+  width: 174px;
+  top: 32px;
+}
+.page-details.farmers-card .policy-info .a4 {
+  left: 300px;
+  width: 203px;
+  top: 48px;
+}
+.page-details.farmers-card .policy-info .a5 {
+  left: 570px;
+  width: 174px;
+  top: 48px;
+}
+.page-details.farmers-card .policy-info .a6 {
+  left: 350px;
+  width: 393px;
+  top: 63px;
+}
+.page-details.farmers-card .policy-info .a7 {
+  left: 157px;
+  width: 585px;
+  top: 120px;
+}
+.page-details.farmers-card .payment-details {
+  position: absolute;
+  top: 342px;
+  left: 56px;
+}
+.page-details.farmers-card .payment-details .b1.b1-1 {
+  left: 80px;
+  width: 20px;
+  top: -1px;
+}
+.page-details.farmers-card .payment-details .b1.b1-2 {
+  left: 130px;
+  width: 20px;
+  top: -1px;
+}
+.page-details.farmers-card .payment-details .b1.b1-3 {
+  left: 223px;
+  width: 20px;
+  top: -1px;
+}
+.page-details.farmers-card .payment-details .b1.b1-4 {
+  left: 301px;
+  width: 20px;
+  top: -1px;
+}
+.page-details.farmers-card .payment-details .b2 {
+  left: 237px;
+  top: 6px;
+  width: 446px;
+}
+.page-details.farmers-card .payment-details .b3 {
+  left: 186px;
+  width: 498px;
+  top: 20px;
+}
+.page-details.farmers-card .payment-details .b4 {
+  left: 224px;
+  width: 66px;
+  top: 35px;
+}
+.page-details.farmers-card .payment-details .b5 {
+  left: 407px;
+  width: 96px;
+  top: 35px;
+}
+.page-details.farmers-card .payment-details .b6.b6-1 {
+  left: 201px;
+  width: 20px;
+  top: 60px;
+}
+.page-details.farmers-card .payment-details .b6.b6-2 {
+  left: 242px;
+  width: 20px;
+  top: 59px;
+}
+.page-details.farmers-card .payment-details .b6.b6-3 {
+  left: 430px;
+  width: 20px;
+  top: 59px;
+}
+.page-details.farmers-card .payment-details .b6.b6-4 {
+  left: 482px;
+  width: 20px;
+  top: 59px;
+}
+.page-details.farmers-card .primary-secondary-details {
+  position: absolute;
+  top: 565px;
+}
+.page-details.farmers-card .primary-secondary-details .b1 {
+  left: 265px;
+  top: 6px;
+  width: 481px;
+}
+.page-details.farmers-card .payer-secondary-details {
+  position: absolute;
+  top: 643px;
+}
+.page-details.farmers-card .payer-secondary-details .b1 {
+  left: 80px;
+  top: 6px;
+  width: 161px;
+}
+.page-details.farmers-card .payer-secondary-details .b2 {
+  left: 310px;
+  top: 83px;
+  width: 440px;
+}
+
+.page {
+  page-break-after: always;
+  position: relative;
+}
+
+.page-details.eft-metlife {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10000;
+}
+.page-details.eft-metlife input[type=date]::-webkit-inner-spin-button, .page-details.eft-metlife input[type=date]::-webkit-calendar-picker-indicator,
+.page-details.eft-metlife input[type=year]::-webkit-inner-spin-button,
+.page-details.eft-metlife input[type=year]::-webkit-calendar-picker-indicator,
+.page-details.eft-metlife input[type=month]::-webkit-inner-spin-button,
+.page-details.eft-metlife input[type=month]::-webkit-calendar-picker-indicator {
+  display: none;
+  -webkit-appearance: none;
+}
+.page-details.eft-metlife .form-img {
+  width: 100%;
+}
+.page-details.eft-metlife .answer {
+  position: absolute;
+  bottom: 0;
+}
+.page-details.eft-metlife .answer img {
+  width: 100%;
+  position: absolute;
+}
+.page-details.eft-metlife .answer input,
+.page-details.eft-metlife .answer textarea {
+  width: 100%;
+  font-size: 10px;
+  font-weight: bold;
+  color: #141414;
+  position: absolute;
+  background: transparent;
+  overflow: hidden;
+}
+.page-details.eft-metlife .answer textarea {
+  font-size: 10px;
+  padding: 0 5px;
+}
+.page-details.eft-metlife .answer.monospace {
+  font-family: monospace;
+  letter-spacing: 7px;
+}
+.page-details.eft-metlife .answer .check-mark {
+  position: absolute;
+}
+.page-details.eft-metlife .answer .check-mark::before, .page-details.eft-metlife .answer .check-mark::after {
+  content: "";
+  height: 2px;
+  width: 15px;
+  background: black;
+  position: absolute;
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+.page-details.eft-metlife .answer .check-mark::before {
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+.page-details.eft-metlife textarea.form-control {
+  border: 0;
+  resize: none;
+  height: 100%;
+}
+.page-details.eft-metlife .operator-info {
+  position: absolute;
+  top: 170px;
+  left: 20px;
+}
+.page-details.eft-metlife .operator-info input {
+  font-size: 13px;
+}
+.page-details.eft-metlife .operator-info .a1 {
+  left: 86px;
+  width: 178px;
+  top: 6px;
+}
+.page-details.eft-metlife .operator-info .a2 {
+  left: 276px;
+  width: 82px;
+  top: 6px;
+}
+.page-details.eft-metlife .operator-info .a3 {
+  left: 370px;
+  width: 222px;
+  top: 6px;
+}
+.page-details.eft-metlife .operator-info .a4 {
+  left: 606px;
+  width: 102px;
+  top: 6px;
+}
+.page-details.eft-metlife .operator-info .a5 {
+  left: 86px;
+  width: 272px;
+  top: 45px;
+}
+.page-details.eft-metlife .operator-info .a6 {
+  left: 370px;
+  width: 155px;
+  top: 45px;
+}
+.page-details.eft-metlife .operator-info .a7 {
+  left: 534px;
+  width: 59px;
+  top: 45px;
+}
+.page-details.eft-metlife .operator-info .a8 {
+  left: 604px;
+  width: 104px;
+  top: 45px;
+}
+.page-details.eft-metlife .section-2 {
+  position: absolute;
+  top: 295px;
+  left: 12px;
+}
+.page-details.eft-metlife .section-2 .a1 {
+  left: 86px;
+  top: -7px;
+}
+.page-details.eft-metlife .section-2 .a2 {
+  left: 400px;
+  top: -6px;
+}
+.page-details.eft-metlife .section-2 .a3 {
+  left: 86px;
+  top: 12px;
+}
+.page-details.eft-metlife .section-3 {
+  position: absolute;
+  top: 373px;
+  left: 12px;
+}
+.page-details.eft-metlife .section-3 .a1 {
+  left: 176px;
+  width: 222px;
+  top: 0;
+}
+.page-details.eft-metlife .section-3 .a2.a2-1 {
+  left: 383px;
+  top: 44px;
+}
+.page-details.eft-metlife .section-3 .a2.a2-2 {
+  left: 383px;
+  top: 44px;
+}
+.page-details.eft-metlife .section-3 .a3 {
+  left: 99px;
+  top: 41px;
+}
+.page-details.eft-metlife .option-2 {
+  position: absolute;
+  top: 490px;
+  left: 112px;
+  width: 620px;
+}
+.page-details.eft-metlife .option-2 .answer {
+  position: relative;
+}
+.page-details.eft-metlife .option-2 .answer input {
+  position: relative;
+  text-align: center;
+}
+.page-details.eft-metlife .option-2 .policy-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 22px;
+}
+.page-details.eft-metlife .option-2 .policy-list .a1 {
+  width: 268px;
+}
+.page-details.eft-metlife .option-2 .policy-list .a2 {
+  width: 46px;
+}
+.page-details.eft-metlife .option-2 .policy-list .a3 {
+  width: 42px;
+}
+.page-details.eft-metlife .option-2 .policy-list .a4 {
+  width: 51px;
+}
+.page-details.eft-metlife .option-2 .policy-list .a5 {
+  width: 119px;
+}
+.page-details.eft-metlife .option-2 .policy-list .a6 {
+  width: 91px;
+}
+.page-details.eft-metlife .section-4 {
+  position: absolute;
+  top: 642px;
+}
+.page-details.eft-metlife .section-4 input {
+  font-size: 15px;
+}
+.page-details.eft-metlife .section-4 .a1 {
+  left: 104px;
+  width: 302px;
+  top: 0;
+}
+.page-details.eft-metlife .section-4 .a2 {
+  left: 417px;
+  width: 162px;
+  top: 0;
+}
+.page-details.eft-metlife .section-4 .a3 {
+  left: 588px;
+  width: 130px;
+  top: 0;
+}
+.page-details.eft-metlife .section-4 .a4 {
+  top: 51px;
+}
+.page-details.eft-metlife .section-4 .a4.a4-1 {
+  left: 98px;
+}
+.page-details.eft-metlife .section-4 .a4.a4-2 {
+  left: 178px;
+}
+.page-details.eft-metlife .section-4 .a4.a4-3 {
+  left: 249px;
+  top: 53px;
+}
+.page-details.eft-metlife .section-4 .a4.a4-4 {
+  left: 469px;
+  top: 54px;
+}
+.page-details.eft-metlife .section-5 {
+  position: absolute;
+  top: 812px;
+  left: 12px;
+}
+.page-details.eft-metlife .section-5 .a2 {
+  left: 570px;
+  width: 162px;
+  top: 2px;
+}
+.page-details.eft-metlife .section-5 .a2 input {
+  font-size: 15px;
 }
 
 .navbar-toggler {
