--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -17,3 +17,7 @@
 @forward "./admin-page.scss";
 @forward "./certificate.scss";
 @forward "./binder-pdf.scss";
+@forward "./bristol-eft.scss";
+@forward "./MA-Operator.scss";
+@forward "./farmers-card.scss";
+@forward "./eft-metlife.scss";
