--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -40,7 +40,15 @@ a {
     text-decoration: none;
     color: var(--color-blue);
 }
-
+.z-index-1{
+    z-index: 1;
+}
+.z-index-2{
+    z-index: 2;
+}
+.z-index-3{
+    z-index: 3;
+}
 .has-error {
     color: var(--color-has-error) !important;
 }
