--- a/src/assets/css/pages/MA-Operator copy.css
+++ b/src/assets/css/pages/MA-Operator copy.css
@@ -127,4 +127,4 @@
 .page-details.ma-operator .insured-name-info .a1 textarea {
   font-size: 14px;
 }
-/*# sourceMappingURL=MA-Operator.css.map */
+/*# sourceMappingURL=MA-Operator copy.css.map */
