--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -21,3 +21,8 @@
 @forward "./MA-Operator.scss";
 @forward "./farmers-card.scss";
 @forward "./eft-metlife.scss";
+@forward "./safec-eft.scss";
+@forward "./trevelor-eft-autopay.scss";
+@forward "./safety-ef-form.scss";
+@forward "./arbella-forms.scss";
+@forward "./maip-hanover.scss";
