--- a/src/scss/pages/safec-eft.scss
+++ b/src/scss/pages/safec-eft.scss
@@ -3,7 +3,7 @@
   position: relative;
 }
 
-.page-details.ma-operator {
+.page-details.safec-eft {
   position: absolute;
   top: 0;
   left: 0;
@@ -75,66 +75,97 @@
     height: 100%;
   }
 
-  .operator-info {
-    position: absolute;
-    top: 272px;
-    left: 140px;
-
-    .a1 {
-      left: 86px;
-      width: 422px;
-      top: 6px;
-    }
-    .a2 {
-      left: 86px;
-      width: 192px;
-      height: 132px;
-      top: 44px;
-
-      textarea {
-        line-height: 15.3px;
-      }
-    }
-  }
-
   .holder-info {
     position: absolute;
-    top: 602px;
+    top: 922px;
     left: 50px;
 
     input {
       font-size: 16px;
     }
 
+    .a0 {
+      left: 451px;
+      width: 75px;
+      top: -191px;
+    }
     .a1 {
-      left: 86px;
-      width: 155px;
-      top: -7px;
+      left: 56px;
+      width: 335px;
+      top: -4px;
     }
     .a2 {
-      left: 86px;
-      width: 152px;
-      top: 57px;
+      left: 496px;
+      width: 202px;
+      top: -4px;
+    }
+    .a3 {
+      left: 496px;
+      width: 202px;
+      top: 44px;
     }
   }
 
-  .insured-name-info {
+  .signature-info {
     position: absolute;
-    top: 764px;
+    top: 732px;
+    left: 50px;
+
+    input {
+      font-size: 16px;
+      text-align: center;
+    }
+
+    .a0 {
+      left: 411px;
+      width: 35px;
+      top: 4px;
+    }
+    .a1 {
+      left: 477px;
+      width: 35px;
+      top: 4px;
+    }
+    .a2 {
+      left: 537px;
+      width: 35px;
+      top: 4px;
+    }
+    .a3 {
+      left: 590px;
+      width: 44px;
+      top: 4px;
+    }
+  }
+
+  .exlusion-info {
+    position: absolute;
+    top: 544px;
     left: 50px;
 
     input {
       font-size: 16px;
     }
-
+    .a0 {
+      left: 39px;
+      width: 402px;
+      top: -337px;
+    }
+    
     .a1 {
-      left: 86px;
+      left: 40px;
       width: 525px;
       height: 100px;
       top: 0;
-      textarea{
+      textarea {
         font-size: 14px;
       }
+    }
+
+    .a2 {
+      left: 120px;
+      width: 202px;
+      top: 290px;
     }
   }
 }
