--- a/src/assets/css/pages/client-profile.css
+++ b/src/assets/css/pages/client-profile.css
@@ -431,9 +431,10 @@
      object-position: center;
 }
 
-.policy-cards {
+.client-profile-cards .policy-cards {
   -webkit-box-shadow: 0px 0px 6px 0px var(--color-drop-shadow);
           box-shadow: 0px 0px 6px 0px var(--color-drop-shadow);
+  background: #fff;
   border-radius: 12px;
   border: 1px solid var(--color-border-light2);
   padding: 10px 10px 0;
@@ -446,10 +447,10 @@
       -ms-flex-direction: column;
           flex-direction: column;
 }
-.policy-cards .btn {
+.client-profile-cards .policy-cards .btn {
   min-width: initial;
 }
-.policy-cards .card-image {
+.client-profile-cards .policy-cards .card-image {
   background-color: var(--color-blue-shade);
   border-radius: 3px;
   padding: 8px 10px;
@@ -467,16 +468,16 @@
       -ms-flex-pack: center;
           justify-content: center;
 }
-.policy-cards .card-image img {
+.client-profile-cards .policy-cards .card-image img {
   margin-bottom: 5px;
 }
-.policy-cards .card-image h4 {
+.client-profile-cards .policy-cards .card-image h4 {
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
   color: var(--color-black);
 }
-.policy-cards .card-body {
+.client-profile-cards .policy-cards .card-body {
   padding: 15px 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -489,26 +490,26 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
-.policy-cards .card-scroll {
+.client-profile-cards .policy-cards .card-scroll {
   overflow: auto;
   max-height: 110px;
 }
-.policy-cards .card-scroll::-webkit-scrollbar {
+.client-profile-cards .policy-cards .card-scroll::-webkit-scrollbar {
   width: 5px;
   height: 5px;
 }
-.policy-cards .card-scroll::-webkit-scrollbar-thumb {
+.client-profile-cards .policy-cards .card-scroll::-webkit-scrollbar-thumb {
   background: var(--color-primary);
 }
-.policy-cards .card-scroll::-webkit-scrollbar-track {
+.client-profile-cards .policy-cards .card-scroll::-webkit-scrollbar-track {
   background: #ececec;
 }
-.policy-cards .card-scroll {
+.client-profile-cards .policy-cards .card-scroll {
   scrollbar-face-color: var(--color-primary);
   scrollbar-track-color: #ececec;
 }
 @media screen and (max-width: 778px) {
-  .policy-cards .card-scroll {
+  .client-profile-cards .policy-cards .card-scroll {
     max-height: 120px;
     overflow: visible;
     display: -webkit-box;
@@ -777,6 +778,83 @@
 }
 .claim-section .claim-progress .progress-step.mark-failed .step-title {
   color: var(--color-has-error);
+}
+.claim-section label.checkbox-inline.radio-active {
+  height: auto;
+}
+.claim-section label.checkbox-inline.squar-boxes {
+  width: 200px;
+}
+.claim-section label.checkbox-inline.squar-boxes.glass-squares img {
+  width: 45px;
+}
+.claim-section label.checkbox-inline.squar-boxes.glass-squares.no-square img {
+  width: 40px;
+}
+.claim-section label.checkbox-inline.squar-boxes img {
+  margin-bottom: 10px;
+}
+
+.claim-additional-info {
+  padding: 20px 15px;
+  border-radius: 8px;
+}
+
+.vehicle-damage {
+  position: relative;
+  padding: 100px 70px;
+}
+.vehicle-damage .vehicle-img {
+  margin: auto;
+  display: block;
+  width: 100%;
+}
+.vehicle-damage .damage-sides {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+.vehicle-damage .car-sides-input {
+  position: absolute;
+}
+.vehicle-damage .car-sides-input.none {
+  left: 50%;
+  top: 0;
+}
+.vehicle-damage .car-sides-input.front {
+  top: 50%;
+  left: 0;
+}
+.vehicle-damage .car-sides-input.rear {
+  top: 50%;
+  left: auto;
+  right: 0;
+}
+.vehicle-damage .car-sides-input.left {
+  left: 50%;
+  bottom: 60px;
+}
+.vehicle-damage .car-sides-input.right {
+  left: 50%;
+  top: 60px;
+}
+.vehicle-damage .car-sides-input.front-left {
+  left: 20%;
+  bottom: 60px;
+}
+.vehicle-damage .car-sides-input.rear-left {
+  right: 20%;
+  bottom: 60px;
+}
+.vehicle-damage .car-sides-input.front-right {
+  left: 20%;
+  top: 60px;
+}
+.vehicle-damage .car-sides-input.rear-right {
+  right: 20%;
+  top: 60px;
 }
 
 .document-section .sec-title {
