--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -30,3 +30,5 @@
 @forward "./norfolk.scss";
 @forward "./pligrim-supp.scss";
 @forward "./safety-supp.scss";
+@forward "./quincy-supp.scss";
+@forward "./amica-forms.scss";
