--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -2554,6 +2554,149 @@ span.checkbox-label.fs-14.me-5.fw-500.main-label {
   border-radius: 5px;
 }
 
+.kitchen-tab.nav-pills .nav-link {
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
+  text-transform: uppercase;
+  color: #8A8A8A;
+}
+
+.kitchen-tab.nav-pills .nav-link.active {
+  background-color: unset;
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 24px;
+  color: #2B2B2B;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+.kitchen-carousel.radio-check-switch .radio-switch-state {
+  margin: 0;
+  background: unset;
+  height: auto;
+  border: 1px solid #E6E6E6;
+}
+
+.kitchen-carousel.radio-check-switch .radio-switch-state img {
+  width: 100%;
+  height: 170px;
+  border-radius: 4px;
+  -o-object-fit: COVER;
+     object-fit: COVER;
+}
+
+.kitchen-carousel.radio-check-switch .owl-item.active.center .radio-switch-state img {
+  width: 270px;
+  height: 290px;
+}
+
+.radio-check-switch.kitchen-carousel input[type=radio]:checked + .radio-switch-state img {
+  width: 270px;
+  height: 290px;
+}
+
+.kitchen-carousel.radio-check-switch .ins-title {
+  position: unset;
+  margin-top: 12px;
+}
+
+.radio-check-switch.kitchen-carousel input[type=radio]:checked + .radio-switch-state {
+  border: 2px solid #016BBF;
+  background: #EBF5FD;
+}
+
+html {
+  font-size: 16px;
+  background: #edeff0;
+  font-family: "Open Sans", sans-serif;
+}
+
+h1 {
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+.wrap {
+  width: 500px;
+  margin: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 4px;
+  background-color: #ffffff;
+  box-shadow: 0 1px 2px 0 #c9ced1;
+  padding: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+
+/* ------------------------------ COUNTER BEGIN ------------------------------ */
+.counter__increment, .counter__decrement {
+  transition: all 0.4s ease-in-out;
+}
+
+.counter {
+  position: relative;
+  width: 7.7rem;
+  height: 1.995rem;
+  border: 1px solid #E6E6E6;
+  border-radius: 3px;
+  text-align: center;
+  overflow: hidden;
+  background: #fff;
+}
+
+.counter__input {
+  border: none;
+  height: 100%;
+  margin: 0 auto;
+  text-align: center;
+  color: #2B2B2B;
+  font-size: 0.975rem;
+  background-color: transparent;
+}
+
+.counter__increment, .counter__decrement {
+  position: absolute;
+  top: 0;
+  font-size: 1rem;
+  line-height: 1.5625rem;
+  height: 1.875rem;
+  width: 2.1875rem;
+  font-weight: normal;
+  color: #616161;
+  text-decoration: none;
+}
+
+.counter__increment:hover, .counter__increment:active, .counter__increment:focus, .counter__decrement:hover, .counter__decrement:active, .counter__decrement:focus {
+  color: #616161;
+  text-decoration: none;
+  background-color: #edeff0;
+}
+
+.counter__increment {
+  right: 0;
+  border-left: 1px solid #E6E6E6;
+}
+
+.counter__decrement {
+  left: 0;
+  top: 0;
+  border-right: 1px solid #E6E6E6;
+  line-height: 1.6875rem;
+}
+
+.input-label {
+  font-weight: 400 !important;
+}
+
+/* ------------------------------ COUNTER END ------------------------------ */
 @media only screen and (max-width: 575px) {
   .fs-16 {
     font-size: 14px;
@@ -7461,6 +7604,669 @@ span.checkbox-label.fs-14.me-5.fw-500.main-label {
   left: 496px;
   width: 204px;
   top: 0;
+}
+
+.page {
+  page-break-after: always;
+  position: relative;
+}
+.page .form-img {
+  width: 100%;
+}
+
+.page-details.quincy {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10000;
+}
+.page-details.quincy input[type=date]::-webkit-inner-spin-button, .page-details.quincy input[type=date]::-webkit-calendar-picker-indicator,
+.page-details.quincy input[type=year]::-webkit-inner-spin-button,
+.page-details.quincy input[type=year]::-webkit-calendar-picker-indicator,
+.page-details.quincy input[type=month]::-webkit-inner-spin-button,
+.page-details.quincy input[type=month]::-webkit-calendar-picker-indicator {
+  display: none;
+  -webkit-appearance: none;
+}
+.page-details.quincy .form-img {
+  width: 100%;
+}
+.page-details.quincy .answer {
+  position: absolute;
+  bottom: 0;
+}
+.page-details.quincy .answer img {
+  width: 100%;
+  position: absolute;
+}
+.page-details.quincy .answer input,
+.page-details.quincy .answer textarea {
+  width: 100%;
+  font-size: 10px;
+  font-weight: bold;
+  color: #141414;
+  position: absolute;
+  background: transparent;
+  overflow: hidden;
+}
+.page-details.quincy .answer textarea {
+  font-size: 10px;
+  padding: 0 5px;
+}
+.page-details.quincy .answer.monospace {
+  font-family: monospace;
+  letter-spacing: 7px;
+}
+.page-details.quincy .answer .check-mark {
+  position: absolute;
+}
+.page-details.quincy .answer .check-mark::before, .page-details.quincy .answer .check-mark::after {
+  content: "";
+  height: 2px;
+  width: 15px;
+  background: black;
+  position: absolute;
+  transform: rotate(45deg);
+}
+.page-details.quincy .answer .check-mark::before {
+  transform: rotate(-45deg);
+}
+.page-details.quincy textarea.form-control {
+  border: 0;
+  resize: none;
+  height: 100%;
+}
+.page-details.quincy .policy-about {
+  position: absolute;
+  top: 362px;
+  left: 50px;
+}
+.page-details.quincy .policy-about input {
+  font-size: 14px;
+}
+.page-details.quincy .policy-about .a1 {
+  left: 539px;
+  width: 310px;
+  top: 0;
+}
+.page-details.quincy .policy-about .a1.a1-2 {
+  left: 585px;
+}
+.page-details.quincy .policy-about .a2 {
+  left: 247px;
+  width: 120px;
+  top: 53px;
+}
+.page-details.quincy .policy-about .a3 {
+  left: 475px;
+  width: 120px;
+  top: 53px;
+}
+.page-details.quincy .applicant-about {
+  position: absolute;
+  top: 605px;
+  left: 50px;
+}
+.page-details.quincy .applicant-about input {
+  font-size: 14px;
+}
+.page-details.quincy .applicant-about .a1 {
+  left: 247px;
+  width: 310px;
+  top: 0;
+}
+.page-details.quincy .applicant-about .a2 {
+  left: 247px;
+  width: 310px;
+  top: 28px;
+}
+.page-details.quincy .applicant-about .a3 {
+  left: 247px;
+  width: 310px;
+  top: 54px;
+}
+.page-details.quincy .applicant-about .a4 {
+  left: 247px;
+  width: 310px;
+  top: 77px;
+}
+.page-details.quincy .applicant-about .a5 {
+  left: 247px;
+  width: 310px;
+  top: 103px;
+}
+.page-details.quincy .applicant-about .a6 {
+  left: 247px;
+  width: 310px;
+  top: 130px;
+}
+.page-details.quincy .prior-coverage {
+  position: absolute;
+  top: 128px;
+  left: 50px;
+}
+.page-details.quincy .prior-coverage input {
+  font-size: 12px;
+}
+.page-details.quincy .prior-coverage .a1 {
+  left: 353px;
+  width: 20px;
+  top: 0;
+}
+.page-details.quincy .prior-coverage .a1.a1-2 {
+  left: 393px;
+}
+.page-details.quincy .prior-coverage .a2 {
+  left: 537px;
+  width: 20px;
+  top: 187px;
+}
+.page-details.quincy .prior-coverage .a2.a2-2 {
+  left: 573px;
+}
+.page-details.quincy .prior-coverage .a3 {
+  left: 577px;
+  width: 20px;
+  top: 294px;
+}
+.page-details.quincy .prior-coverage .a3.a3-2 {
+  left: 603px;
+}
+.page-details.quincy .prior-coverage .a4 {
+  left: 160px;
+  width: 20px;
+  top: 427px;
+}
+.page-details.quincy .prior-coverage .a4.a4-2 {
+  left: 212px;
+}
+.page-details.quincy .prior-coverage .a5 {
+  left: 352px;
+  width: 20px;
+  top: 668px;
+}
+.page-details.quincy .prior-coverage .a5.a5-2 {
+  left: 398px;
+}
+.page-details.quincy .prior-coverage .a5-other {
+  left: 92px;
+  width: 369px;
+  top: 708px;
+}
+.page-details.quincy .prior-coverage .a6 {
+  left: 167px;
+  width: 20px;
+  top: 27px;
+}
+.page-details.quincy .prior-coverage .a6.a6-2 {
+  left: 212px;
+}
+.page-details.quincy .signature-info {
+  position: absolute;
+  top: 498px;
+  left: 220px;
+}
+.page-details.quincy .signature-info .a1 {
+  left: 178px;
+  width: 85px;
+  top: 13px;
+}
+.page-details.quincy .signature-info .a2 {
+  left: 178px;
+  width: 85px;
+  top: 98px;
+}
+
+.page {
+  page-break-after: always;
+  position: relative;
+}
+
+.page-details.amica-eft {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10000;
+}
+.page-details.amica-eft input[type=date]::-webkit-inner-spin-button, .page-details.amica-eft input[type=date]::-webkit-calendar-picker-indicator,
+.page-details.amica-eft input[type=year]::-webkit-inner-spin-button,
+.page-details.amica-eft input[type=year]::-webkit-calendar-picker-indicator,
+.page-details.amica-eft input[type=month]::-webkit-inner-spin-button,
+.page-details.amica-eft input[type=month]::-webkit-calendar-picker-indicator {
+  display: none;
+  -webkit-appearance: none;
+}
+.page-details.amica-eft .form-img {
+  width: 100%;
+}
+.page-details.amica-eft .answer {
+  position: absolute;
+  bottom: 0;
+}
+.page-details.amica-eft .answer img {
+  width: 100%;
+  position: absolute;
+}
+.page-details.amica-eft .answer input,
+.page-details.amica-eft .answer textarea {
+  width: 100%;
+  font-size: 10px;
+  font-weight: bold;
+  color: #141414;
+  position: absolute;
+  background: transparent;
+  overflow: hidden;
+}
+.page-details.amica-eft .answer textarea {
+  font-size: 10px;
+  padding: 0 5px;
+}
+.page-details.amica-eft .answer.monospace {
+  font-family: monospace;
+  letter-spacing: 7px;
+}
+.page-details.amica-eft .answer .check-mark {
+  position: absolute;
+}
+.page-details.amica-eft .answer .check-mark::before, .page-details.amica-eft .answer .check-mark::after {
+  content: "";
+  height: 2px;
+  width: 15px;
+  background: black;
+  position: absolute;
+  transform: rotate(45deg);
+}
+.page-details.amica-eft .answer .check-mark::before {
+  transform: rotate(-45deg);
+}
+.page-details.amica-eft textarea.form-control {
+  border: 0;
+  resize: none;
+  height: 100%;
+}
+.page-details.amica-eft .insured-info {
+  position: absolute;
+  top: 110px;
+  left: 50px;
+}
+.page-details.amica-eft .insured-info input {
+  font-size: 14px;
+}
+.page-details.amica-eft .insured-info .a1 {
+  left: 54px;
+  width: 20px;
+  top: 30px;
+}
+.page-details.amica-eft .insured-info .a1.a1-2 {
+  left: 292px;
+}
+.page-details.amica-eft .insured-info .a1.a1-3 {
+  left: 514px;
+}
+.page-details.amica-eft .insured-info .a2 {
+  left: 163px;
+  width: 520px;
+  top: 41px;
+}
+.page-details.amica-eft .insured-info .a3 {
+  left: 66px;
+  width: 622px;
+  top: 63px;
+}
+.page-details.amica-eft .insured-info .a4 {
+  left: 43px;
+  width: 270px;
+  top: 84px;
+}
+.page-details.amica-eft .insured-info .a5 {
+  left: 360px;
+  width: 120px;
+  top: 86px;
+}
+.page-details.amica-eft .insured-info .a6 {
+  left: 521px;
+  width: 165px;
+  top: 86px;
+}
+.page-details.amica-eft .insured-info .a7 {
+  left: 120px;
+  width: 570px;
+  top: 107px;
+}
+.page-details.amica-eft .account-info {
+  position: absolute;
+  top: 439px;
+  left: 0;
+}
+.page-details.amica-eft .account-info input {
+  font-size: 15px;
+}
+.page-details.amica-eft .account-info .answer.monospace input {
+  letter-spacing: 16.5px;
+  font-size: 15px;
+}
+.page-details.amica-eft .account-info .a1 {
+  left: 138px;
+  width: 599px;
+  top: 48px;
+}
+.page-details.amica-eft .account-info .a2 {
+  left: 204px;
+  width: 529px;
+  top: 69px;
+}
+.page-details.amica-eft .account-info .a3 {
+  left: 269px;
+  width: 20px;
+  top: 105px;
+}
+.page-details.amica-eft .account-info .a3.a3-2 {
+  left: 366px;
+}
+.page-details.amica-eft .account-info .a4 {
+  left: 210px;
+  width: 359px;
+  top: 120px;
+}
+.page-details.amica-eft .account-info .a5 {
+  left: 342px;
+  width: 359px;
+  top: 140px;
+}
+.page-details.amica-eft .account-info .a6 {
+  left: 653px;
+  width: 50px;
+  top: 120px;
+}
+.page-details.amica-eft .account-info .a7 {
+  left: 391px;
+  width: 50px;
+  top: 180px;
+}
+.page-details.amica-eft .signature-info {
+  position: absolute;
+  top: 790px;
+  left: 0;
+}
+.page-details.amica-eft .signature-info .a1 {
+  left: 661px;
+  width: 99px;
+  top: 40px;
+}
+.page-details.amica-eft .signature-info .a2 {
+  left: 661px;
+  width: 99px;
+  top: 67px;
+}
+.page-details.amica-eft.arbella-excluison .operator-info {
+  position: absolute;
+  top: 305px;
+  left: 110px;
+}
+.page-details.amica-eft.arbella-excluison .operator-info input,
+.page-details.amica-eft.arbella-excluison .operator-info textarea {
+  font-size: 14px;
+}
+.page-details.amica-eft.arbella-excluison .operator-info .a1 {
+  left: 67px;
+  width: 422px;
+  top: 6px;
+}
+.page-details.amica-eft.arbella-excluison .operator-info .a2 {
+  left: 66px;
+  width: 502px;
+  height: 72px;
+  top: 44px;
+}
+.page-details.amica-eft.arbella-excluison .operator-info .a2 textarea {
+  line-height: 15.3px;
+}
+.page-details.amica-eft.arbella-excluison .holder-info {
+  position: absolute;
+  top: 782px;
+  left: 0;
+}
+.page-details.amica-eft.arbella-excluison .holder-info input {
+  font-size: 16px;
+}
+.page-details.amica-eft.arbella-excluison .holder-info .a1 {
+  left: 77px;
+  width: 155px;
+  top: -3px;
+}
+.page-details.amica-eft.arbella-excluison .holder-info .a2 {
+  left: 76px;
+  width: 152px;
+  top: 72px;
+}
+.page-details.amica-eft.arbella-suplemental .page-about {
+  position: absolute;
+  top: 10px;
+  left: 500px;
+}
+.page-details.amica-eft.arbella-suplemental .page-about .a1 {
+  left: 55px;
+  width: 170px;
+  top: 15px;
+}
+.page-details.amica-eft.arbella-suplemental .page-about .a2 {
+  left: 89px;
+  width: 143px;
+  top: 31px;
+}
+.page-details.amica-eft.arbella-suplemental .page-about .a3 {
+  left: 106px;
+  width: 123px;
+  top: 45px;
+}
+.page-details.amica-eft.arbella-suplemental .insured-info {
+  position: absolute;
+  top: 220px;
+  left: 50px;
+}
+.page-details.amica-eft.arbella-suplemental .insured-info input {
+  font-size: 12px;
+}
+.page-details.amica-eft.arbella-suplemental .insured-info .a1 {
+  left: 97px;
+  width: 20px;
+  top: 24px;
+}
+.page-details.amica-eft.arbella-suplemental .insured-info .a1.other-true input {
+  display: inline-block;
+  left: 124px;
+  top: -8px;
+  width: 37px;
+  font-size: 10px;
+  text-align: right;
+}
+.page-details.amica-eft.arbella-suplemental .insured-info .a2 {
+  left: 96px;
+  width: 20px;
+  top: 45px;
+}
+.page-details.amica-eft.arbella-suplemental .insured-info .a2.other-true input {
+  display: inline-block;
+  font-size: 10px;
+  text-align: right;
+}
+.page-details.amica-eft.arbella-suplemental .insured-info .a2.other-true input#a2-1-other {
+  left: 29px;
+  top: 8px;
+  width: 40px;
+}
+.page-details.amica-eft.arbella-suplemental .insured-info .a2.other-true input#a2-2-other {
+  left: 114px;
+  top: 8px;
+  width: 26px;
+}
+.page-details.amica-eft.arbella-suplemental .insured-info .a2.other-true input#a2-3-other {
+  left: 322px;
+  top: 8px;
+  width: 238px;
+  text-align: left;
+}
+.page-details.amica-eft.arbella-suplemental .insured-info .a3 {
+  left: 97px;
+  width: 20px;
+  top: 81px;
+}
+.page-details.amica-eft.arbella-suplemental .insured-info .a4 {
+  left: 272px;
+  width: 20px;
+  top: 81px;
+}
+.page-details.amica-eft.arbella-suplemental .insured-info .a5 {
+  left: 240px;
+  width: 120px;
+  top: 100px;
+}
+.page-details.amica-eft.arbella-suplemental .insured-info .a6 {
+  left: 100px;
+  width: 225px;
+  top: 156px;
+}
+.page-details.amica-eft.arbella-suplemental .insured-info .a7 {
+  left: 479px;
+  width: 175px;
+  top: 156px;
+}
+.page-details.amica-eft.arbella-suplemental .insured-info .a8 {
+  left: 589px;
+  width: 22px;
+  top: 153px;
+}
+.page-details.amica-eft.arbella-suplemental .insured-info .a8.a8-2 {
+  left: 639px;
+}
+.page-details.amica-eft.arbella-suplemental .insured-info .a9 {
+  left: 428px;
+  width: 155px;
+  top: 186px;
+}
+.page-details.amica-eft.arbella-suplemental .insured-info .a10 {
+  left: 589px;
+  width: 22px;
+  top: 198px;
+}
+.page-details.amica-eft.arbella-suplemental .insured-info .a10.a10-2 {
+  left: 639px;
+}
+.page-details.amica-eft.arbella-suplemental .insured-info .a11 {
+  left: 595px;
+  width: 22px;
+  top: 243px;
+}
+.page-details.amica-eft.arbella-suplemental .insured-info .a11.a11-2 {
+  left: 647px;
+}
+.page-details.amica-eft.arbella-suplemental .insured-info .a12 {
+  left: 589px;
+  width: 22px;
+  top: 272px;
+}
+.page-details.amica-eft.arbella-suplemental .insured-info .a12.a12-2 {
+  left: 639px;
+}
+.page-details.amica-eft.arbella-suplemental .account-info {
+  position: absolute;
+  top: 547px;
+  left: 0;
+}
+.page-details.amica-eft.arbella-suplemental .account-info input {
+  font-size: 12px;
+}
+.page-details.amica-eft.arbella-suplemental .account-info .a1 {
+  left: 115px;
+  width: 220px;
+  top: 39px;
+}
+.page-details.amica-eft.arbella-suplemental .account-info .a2 {
+  left: 115px;
+  width: 220px;
+  top: 54px;
+}
+.page-details.amica-eft.arbella-suplemental .account-info .a3 {
+  left: 115px;
+  width: 220px;
+  top: 69px;
+}
+.page-details.amica-eft.arbella-suplemental .account-info .a4 {
+  left: 115px;
+  width: 220px;
+  top: 84px;
+}
+.page-details.amica-eft.arbella-suplemental .account-info .b1 {
+  left: 377px;
+  width: 21px;
+  top: 50px;
+  transform: scale(0.8);
+}
+.page-details.amica-eft.arbella-suplemental .account-info .b1.b1-2 {
+  left: 428px;
+}
+.page-details.amica-eft.arbella-suplemental .account-info .b1.b2 {
+  top: 65px;
+}
+.page-details.amica-eft.arbella-suplemental .account-info .b1.b3 {
+  top: 80px;
+}
+.page-details.amica-eft.arbella-suplemental .account-info .b1.b4 {
+  top: 95px;
+}
+.page-details.amica-eft.arbella-suplemental .account-info .c1 {
+  left: 563px;
+  width: 21px;
+  top: 50px;
+}
+.page-details.amica-eft.arbella-suplemental .account-info .c1.c1-2 {
+  left: 614px;
+}
+.page-details.amica-eft.arbella-suplemental .account-info .c1.c2 {
+  top: 65px;
+}
+.page-details.amica-eft.arbella-suplemental .account-info .c1.c3 {
+  top: 80px;
+}
+.page-details.amica-eft.arbella-suplemental .account-info .c1.c4 {
+  top: 95px;
+}
+.page-details.amica-eft.arbella-suplemental .account-info .d1 {
+  left: 624px;
+  width: 21px;
+  top: 124px;
+}
+.page-details.amica-eft.arbella-suplemental .account-info .d1.d1-2 {
+  left: 672px;
+}
+.page-details.amica-eft.arbella-suplemental .account-info .d1.d2 {
+  top: 139px;
+}
+.page-details.amica-eft.arbella-suplemental .account-info .d1.d3 {
+  top: 153px;
+}
+.page-details.amica-eft.arbella-suplemental .account-info .d1.d4 {
+  top: 168px;
+}
+.page-details.amica-eft.arbella-suplemental .account-info .d1.d5 {
+  top: 183px;
+}
+.page-details.amica-eft.arbella-suplemental .signature-info {
+  position: absolute;
+  top: 790px;
+  left: 0;
+}
+.page-details.amica-eft.arbella-suplemental .signature-info .a1 {
+  left: 295px;
+  width: 99px;
+  top: -31px;
+}
+.page-details.amica-eft.arbella-suplemental .signature-info .a2 {
+  left: 295px;
+  width: 99px;
+  top: 70px;
 }
 
 .navbar-toggler {
