--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1170,8 +1170,14 @@ main .main-wrapper p {
   border-bottom: none;
 }
 .remarket-tab .blue-light-box {
+  position: relative;
   background-color: var(--color-blue-shade) !important;
   background: var(--color-blue-shade) !important;
+}
+.remarket-tab .blue-light-box > .edit-icon {
+  position: absolute;
+  top: 15px;
+  right: 15px;
 }
 
 @media only screen and (max-width: 575px) {
@@ -3141,6 +3147,14 @@ h1 {
     width: 432px;
   }
 }
+.no_result_found {
+  text-align: center;
+}
+.no_result_found p {
+  max-width: 317px;
+  margin: 0 auto;
+}
+
 .policy-summary .summary-head {
   margin-bottom: 24px;
   font-family: Roboto Serif;
