--- a/src/assets/css/pages/login.css
+++ b/src/assets/css/pages/login.css
@@ -398,4 +398,11 @@ h1 {
     width: 432px;
   }
 }
+.no_result_found {
+  text-align: center;
+}
+.no_result_found p {
+  max-width: 317px;
+  margin: 0 auto;
+}
 /*# sourceMappingURL=login.css.map */
